--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@supabase/supabase-js": "^2.4.0",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
+    "@supabase/supabase-js": "^2.4.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -31,6 +34,7 @@
     "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "supabase": "^1.34.5",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4"
   }
