--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -19,6 +20,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^9.0.0",
+    "cypress": "^12.3.0",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
